implemented editing of listing and user

--- a/Frontend/src/locales/en.json
+++ b/Frontend/src/locales/en.json
@@ -25,6 +25,31 @@
     "myListings": "My Listings",
     "favoriteListings": "Favorite Listings",
     "noAccount" : "Don't have an account?",
-    "alreadyHaveAccount" : "Already have an account?"
+    "alreadyHaveAccount" : "Already have an account?",
+    "selectCategory": "Select Category",
+    "electronics" : "Electronics",
+    "furniture" :  "Furniture",
+    "clothing" : "Clothing",
+    "books" : "Books",
+    "toys" : "Toys",
+    "sports" : "Sports",
+    "tools" : "Tools",
+    "misc" : "Misc",
+    "search" : "Search",
+    "all" : "All",
+    "briefDescription" : "Brief Description",
+    "sortByPriceDESC" : "Sort by Price (Descending)",
+    "sortByPriceASC" : "Sort by Price (Ascending)",
+    "sortByDateDESC" : "Sort by Date (Newest first)",
+    "sortByDateASC" : "Sort by Date (Oldest first)",
+    "changePassword" : "Change Password",
+    "oldPassword" : "Old Password",
+    "newPassword" : "New Password",
+    "confirmPassword" : "Confirm Password",
+    "change" : "Change",
+    "editListing" : "Edit Listing",
+    "existingImages" : "Existing Images",
+    "newImages" : "New Images",
+    "delete" : "Delete"
   }
   
