--- a/Frontend/src/locales/ja.json
+++ b/Frontend/src/locales/ja.json
@@ -25,5 +25,30 @@
     "myListings": "私のリスティング",
     "favoriteListings": "お気に入りのリスティング",
     "noAccount" : "アカウントをお持ちでないですか？",
-    "alreadyHaveAccount" : "すでにアカウントをお持ちですか？"
+    "alreadyHaveAccount" : "すでにアカウントをお持ちですか？",
+    "selectCategory": "カテゴリーを選択してください",
+    "electronics" : "電子機器",
+    "furniture" : "家具",
+    "clothing" : "衣類",
+    "books" : "本",
+    "toys" : "おもちゃ",
+    "sports" : "スポーツ",
+    "tools" : "道具",
+    "misc" : "その他",
+    "search": "検索",
+    "all": "すべて",
+    "briefDescription": "簡単な説明",
+    "sortByPriceDESC" : "価格の高い順",
+    "sortByPriceASC" : "価格の安い順",
+    "sortByDateDESC" : "新しい順",
+    "sortByDateASC" : "古い順",
+    "changePassword" : "パスワードを変更する",
+    "oldPassword" : "旧パスワード",
+    "newPassword" : "新しいパスワード",
+    "confirmPassword" : "パスワードを認証する",
+    "change" : "変更する",
+    "editListing" : "リスティングを編集する",
+    "existingImages" : "既存の画像",
+    "newImages" : "新しい画像",
+    "delete" : "削除する"
 }
