--- a/Frontend/src/locales/nb.json
+++ b/Frontend/src/locales/nb.json
@@ -25,6 +25,31 @@
     "myListings": "Mine annonser",
     "favoriteListings": "Favorittannonser",
     "noAccount" : "Har du ikke konto?",
-    "alreadyHaveAccount" : "Har du allerede konto?"
+    "alreadyHaveAccount" : "Har du allerede konto?",
+    "selectCategory": "Velg kategori",
+    "electronics" : "Elektronikk",
+    "furniture" : "Møbler",
+    "clothing" : "Klær",
+    "books" : "Bøker",
+    "toys" : "Leker",
+    "sports" : "Sport",
+    "tools" : "Verktøy",
+    "misc" : "Diverse",
+    "search": "Søk",
+    "all": "Alle",
+    "briefDescription": "Kort beskrivelse",
+    "sortByPriceDESC": "Sorter etter pris (stigende)",
+    "sortByPriceASC": "Sorter etter pris (synkende)",
+    "sortByDateDESC": "Sorter etter dato (nyeste først)",
+    "sortByDateASC": "Sorter etter dato (eldste først)",
+    "changePassword" : "Endre passord",
+    "oldPassword" : "Gammelt passord" ,
+    "newPassword" : "Nytt passord" ,
+    "confirmPassword" : "Bekreft passord" ,
+    "change" : "Endre" ,
+    "editListing" : "Rediger annonse" ,
+    "existingImages" : "Eksisterende bilder" ,
+    "newImages" : "Nye bilder" ,
+    "delete" : "Slett"  
   }
   
