--- a/Frontend/src/locales/nn.json
+++ b/Frontend/src/locales/nn.json
@@ -25,5 +25,30 @@
     "myListings": "Mine annonser",
     "favoriteListings": "Favorittannonser",
     "noAccount" : "Har du ikkje konto?",
-    "alreadyHaveAccount" : "Har du allereie konto?"
+    "alreadyHaveAccount" : "Har du allereie konto?",
+    "selectCategory": "Vel kategori",
+    "electronics" : "Elektronikk",
+    "furniture" : "Møbler",
+    "clothing" : "Klær",
+    "books" : "Bøker",
+    "toys" : "Leikar",
+    "sports" : "Sport",
+    "tools" : "Verktøy",
+    "misc" : "Diverse",
+    "search": "Søk",
+    "all": "Alle",
+    "briefDescription": "Kort beskrivelse",
+    "sortByPriceDESC": "Sorter etter pris (synkande)",
+    "sortByPriceASC": "Sorter etter pris (stigande)",
+    "sortByDateDESC": "Sorter etter dato (nyeste først)",
+    "sortByDateASC": "Sorter etter dato (eldste først)",
+    "changePassword" : "Endre passord",
+    "oldPassword" : "Gammalt passord",
+    "newPassword" : "Nytt passord",
+    "confirmPassword" : "Bekreft passord",
+    "change" : "Endre",
+    "editListing" : "Rediger annonse",
+    "existingImages" : "Eksisterande bilete" ,
+    "newImages" : "Nye bilete",
+    "delete" : "Slett"
   }
